--- a/Css/styles.css
+++ b/Css/styles.css
@@ -10,6 +10,10 @@ header {
     min-height: 25vh;
     
 }
+.logo {
+    width:150px;
+    height:50px;
+}
 
 .nav-item {
    margin: 10px;
@@ -65,4 +69,65 @@ main {
     border-radius: 10px;
     padding: 10px;
     background-color: cornsilk;
+}
+.form-contact{
+    display: flex;
+    justify-content: center;
+}
+.f-contacto{
+    padding: 5px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid grey;
+}
+.boton{
+    display: flex;
+    justify-content: center;
+    color:darkgrey;
+    padding: 5px;
+}
+.etiqueta{
+    
+    display: flex;
+    color:grey;
+    display: flex;
+    width: 100%;
+}
+table{
+    padding: 20px 100px;
+    display: flex;
+    align-items:center;
+}
+td{
+    padding: 5px;
+    background-color:antiquewhite;
+    border: 1px solid grey;
+}
+.tabla{
+    border: 1px solid grey;
+    background-color: cornsilk;
+    width: 400px;
+}
+.eventos {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    
+    
+}
+.cards {
+    box-shadow: 0 5px 5px 0 grey;
+    display: flex;
+    background-color: cornsilk;
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+.card-img-top {
+    border-radius: 8px;
+    object-fit: cover;
+}
+.card-text {
+    margin-left: 10px;
 }
