--- a/Css/styles.css
+++ b/Css/styles.css
@@ -54,16 +54,14 @@ main {
     text-align: center;
 }
 .events {
+    margin-left: 30px;
     padding: 30px;
     gap: 1rem;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-.image{
-    height: 50%;
-    border-radius: 5px;
-}
+
 .card {
     border: 1px solid gray;
     border-radius: 10px;
@@ -113,17 +111,10 @@ td{
 .eventos {
     display: flex;
     justify-content: center;
-    padding: 50px;
-    
-    
+    padding: 50px;   
 }
-.cards {
-    box-shadow: 0 5px 5px 0 grey;
-    display: flex;
-    background-color: cornsilk;
-    border: 1px solid grey;
-    border-radius: 10px;
-}
+
+
 .card-img-top {
     border-radius: 8px;
     object-fit: cover;
