--- a/Css/styles.css
+++ b/Css/styles.css
@@ -96,18 +96,27 @@ main {
 }
 table{
     padding: 20px 100px;
-    display: flex;
-    align-items:center;
+    background-color: cornsilk;
+    width: 80%;
+    margin-left: 10%;
+
 }
+th, td {
+    border: 1px solid black !important;
+}
+
+th {
+    text-align: center !important;
+}
+
 td{
     padding: 5px;
-    background-color:antiquewhite;
+    
     border: 1px solid grey;
 }
 .tabla{
     border: 1px solid grey;
-    background-color: cornsilk;
-    width: 400px;
+    
 }
 .eventos {
     display: flex;
