--- a/Css/styles.css
+++ b/Css/styles.css
@@ -132,3 +132,451 @@ td{
 .card-text {
     margin-left: 10px;
 }
+
+.ChecksYBusqueda{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.ChecksYBusqueda2{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    align-items: center;
+    width:60%;
+    flex-wrap: wrap;
+} 
+
+a{
+    font-stretch: normal;
+}
+
+.searchAndTxt{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    width:40%;
+    flex-wrap: wrap;
+}
+
+#textSearch{
+    height: 20%;
+    width:40%;
+}
+#botonBuscarTxt{
+    height: 20%;
+}
+
+#botonBuscarTxt2{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.contenedorCardsHome{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+}
+
+/* img{
+    object-fit: contain;
+} */
+
+
+
+.divLogos{
+    display: flex;
+    flex-direction: row;
+    height: 5vh;
+    width: 100vw;
+}
+
+#cohort44-45{
+    width: 10vw;
+    height: 3vh;
+    margin-top: 1rem; 
+    /* padding: 1rem; */
+    text-align: center;
+}
+
+.contedorfomulario{
+    width:100%;
+    /* height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 4rem;
+}
+
+#formularioContacto{
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;;
+    justify-content: center;
+   /* margin-left: 30rem; */
+}
+
+.buttonSubmit{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    width: 100%;
+}
+
+#txtMessage
+{
+    height: 25rem;
+    width: 50rem;
+}
+
+
+#txtName, 
+#txtEmail{
+    width: 50rem;
+}
+label{
+    font-size: medium;
+}
+
+#cardPastEvents{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 55vh;
+    width: 100vw;
+}
+
+#cardMarathon{
+    width: 60%;
+}
+
+#contenedorCard{
+    height: 100%;
+    width: 100%;
+}
+
+tr, td{
+    border: 1px solid black;
+    width: 20vh;
+}
+
+th{
+    border: 1px solid black;
+    background-color: gray;
+}
+
+.mainStats{
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+
+#botonContacto{
+    color : blue
+}
+
+table{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#titleTable{
+    font-weight: bold;
+}
+
+.img-fluid{
+    object-fit: cover;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 424px) {
+    #buttonNav1,
+    #buttonNav2,
+    #buttonNav3,
+    #buttonNav4,
+    #buttonNav5{
+        background-color: white;
+        border: 1px solid gray;
+        align-content: center;
+        width: 50%;
+        height: 2%;
+    } 
+
+    #navbarVarId{
+        margin-right: 3rem;
+    }
+
+    #navbarNavAltMarkup{
+        margin-left: 30%;
+    }
+
+    #txtName, 
+    #txtEmail,
+    #txtMessage{
+        width: 100%;
+    }
+
+    li{
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .ChecksYBusqueda{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .searchAndTxt{
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    }
+    .ChecksYBusqueda2{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-around;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    } 
+
+    #formularioContacto{
+        width:90%;
+    }
+
+    #botonBuscarTxt{
+        height: 1.5rem;
+        display: flex;
+        align-items: center;
+    }
+
+    /* div{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    } */
+
+    #cohort44-45{
+        width: 30vw;
+        height: 8vh;
+    }
+
+    #navbarNavAltMarkup{
+        margin-bottom: 1rem;
+    }
+
+    label, a{
+        font-size: small;
+    }
+
+    #carouselExample{
+        padding: 5px;
+    }
+}
+
+@media only screen and (min-width: 425px) and (max-width: 767px) {
+
+    #buttonNav1,
+    #buttonNav2,
+    #buttonNav3,
+    #buttonNav4,
+    #buttonNav5{
+        background-color: white;
+        border: 1px solid gray;
+        align-content: center;
+        width: 60%;
+        height: 2%;
+    } 
+
+    #navbarNavAltMarkup{
+        margin-left: 30%;
+    }
+
+    #navbarVarId{
+        margin-right: 3rem;
+    }
+
+    #txtName, 
+    #txtEmail,
+    #txtMessage{
+        width: 100%;
+    }
+
+    li{
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .ChecksYBusqueda{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .searchAndTxt{
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    }
+    .ChecksYBusqueda2{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-around;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    } 
+
+    #formularioContacto{
+        width:90%;
+    }
+
+    #botonBuscarTxt{
+        height: 1.5rem;
+        display: flex;
+        align-items: center;
+    }
+
+    /* div{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    } */
+
+    #cohort44-45{
+        width: 30vw;
+        height: 7.5vh;
+    }
+
+    #navbarNavAltMarkup{
+        margin-bottom: 1rem;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    li{
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    #navbarNavAltMarkup{
+        margin-left: 40%;
+    }
+
+        ul{
+        margin-right: 2rem;
+    }
+
+    .formularioContacto{
+        width: 100%;
+    }
+
+    #txtName, 
+    #txtEmail,
+    #txtMessage{
+        width: 40rem;
+    }
+
+    #buttonNav1,
+    #buttonNav2,
+    #buttonNav3,
+    #buttonNav4,
+    #buttonNav5{
+        background-color: white;
+        border: 1px solid gray;
+        align-content: center;
+        width: 32%;
+        height: 2%;
+    } 
+
+    #cohort44-45{
+        width: 21vw;
+        height: 4vh;
+        margin: 0;
+    }
+
+    .ChecksYBusqueda{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .searchAndTxt{
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    }
+    .ChecksYBusqueda2{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-around;
+        align-items: center;
+        width:100%;
+        flex-wrap: wrap;
+    } 
+
+    #botonBuscarTxt{
+        height: 1.5rem;
+        display: flex;
+        align-items: center;
+    }
+    #navbarNavAltMarkup{
+        margin-bottom: 1rem;
+    }
+
+    
+}
+
+
+    
+    #textSearch{
+        height: 20%;
+        width:15rem;
+    }
+
+    #navbarVarId{
+        width:70vw;
+    }
+
+    #cohort44-45{
+        width:15vw;
+        margin: 0;
+    }
+
+
+
+}
+
+@media only screen and (min-width: 1440px) and (max-width: 2559px) {
+
+    /* #navbarVarId{
+        width: 55vw;
+    } */
+
+    #buttonNav1,
+    #buttonNav2,
+    #buttonNav3,
+    #buttonNav4,
+    #buttonNav5{
+        background-color: white;
+        border: 1px solid gray;
+        align-content: center;
+        width: 16%;
+        height: 2%;
+    } 
+
+
+}
