--- a/Css/styles.css
+++ b/Css/styles.css
@@ -96,7 +96,7 @@ main {
 }
 table{
     padding: 20px 100px;
-    background-color: cornsilk;
+    background-color:whitesmoke);
     width: 80%;
     margin-left: 10%;
 
@@ -184,44 +184,6 @@ a{
     margin-bottom: 1rem;
 }
 
-/* img{
-    object-fit: contain;
-} */
-
-
-
-.divLogos{
-    display: flex;
-    flex-direction: row;
-    height: 5vh;
-    width: 100vw;
-}
-
-#cohort44-45{
-    width: 10vw;
-    height: 3vh;
-    margin-top: 1rem; 
-    /* padding: 1rem; */
-    text-align: center;
-}
-
-.contedorfomulario{
-    width:100%;
-    /* height: 100vh; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 4rem;
-}
-
-#formularioContacto{
-    display: flex; 
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100%;;
-    justify-content: center;
-   /* margin-left: 30rem; */
-}
 
 .buttonSubmit{
     display: flex;
@@ -269,7 +231,7 @@ tr, td{
 
 th{
     border: 1px solid black;
-    background-color: gray;
+    background-color: cornsilk;
 }
 
 .mainStats{
@@ -277,9 +239,6 @@ th{
     padding: 1rem;
 }
 
-#botonContacto{
-    color : blue
-}
 
 table{
     font-family: 'Times New Roman', Times, serif;
@@ -292,20 +251,6 @@ table{
 .img-fluid{
     object-fit: cover;
 }
-
-@media only screen and (min-width: 320px) and (max-width: 424px) {
-    #buttonNav1,
-    #buttonNav2,
-    #buttonNav3,
-    #buttonNav4,
-    #buttonNav5{
-        background-color: white;
-        border: 1px solid gray;
-        align-content: center;
-        width: 50%;
-        height: 2%;
-    } 
-
     #navbarVarId{
         margin-right: 3rem;
     }
@@ -314,11 +259,6 @@ table{
         margin-left: 30%;
     }
 
-    #txtName, 
-    #txtEmail,
-    #txtMessage{
-        width: 100%;
-    }
 
     li{
         margin-top: 0.5rem;
@@ -358,15 +298,7 @@ table{
         align-items: center;
     }
 
-    /* div{
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-    } */
-
-    #cohort44-45{
-        width: 30vw;
-        height: 8vh;
-    }
+  
 
     #navbarNavAltMarkup{
         margin-bottom: 1rem;
@@ -376,24 +308,8 @@ table{
         font-size: small;
     }
 
-    #carouselExample{
-        padding: 5px;
-    }
-}
-
 @media only screen and (min-width: 425px) and (max-width: 767px) {
 
-    #buttonNav1,
-    #buttonNav2,
-    #buttonNav3,
-    #buttonNav4,
-    #buttonNav5{
-        background-color: white;
-        border: 1px solid gray;
-        align-content: center;
-        width: 60%;
-        height: 2%;
-    } 
 
     #navbarNavAltMarkup{
         margin-left: 30%;
@@ -403,11 +319,6 @@ table{
         margin-right: 3rem;
     }
 
-    #txtName, 
-    #txtEmail,
-    #txtMessage{
-        width: 100%;
-    }
 
     li{
         margin-top: 0.5rem;
@@ -447,21 +358,6 @@ table{
         align-items: center;
     }
 
-    /* div{
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-    } */
-
-    #cohort44-45{
-        width: 30vw;
-        height: 7.5vh;
-    }
-
-    #navbarNavAltMarkup{
-        margin-bottom: 1rem;
-    }
-
-}
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     li{
@@ -481,29 +377,6 @@ table{
         width: 100%;
     }
 
-    #txtName, 
-    #txtEmail,
-    #txtMessage{
-        width: 40rem;
-    }
-
-    #buttonNav1,
-    #buttonNav2,
-    #buttonNav3,
-    #buttonNav4,
-    #buttonNav5{
-        background-color: white;
-        border: 1px solid gray;
-        align-content: center;
-        width: 32%;
-        height: 2%;
-    } 
-
-    #cohort44-45{
-        width: 21vw;
-        height: 4vh;
-        margin: 0;
-    }
 
     .ChecksYBusqueda{
         display: flex;
@@ -539,44 +412,8 @@ table{
 
     
 }
-
-
-    
-    #textSearch{
+    s#textSearch{
         height: 20%;
         width:15rem;
     }
-
-    #navbarVarId{
-        width:70vw;
-    }
-
-    #cohort44-45{
-        width:15vw;
-        margin: 0;
-    }
-
-
-
-}
-
-@media only screen and (min-width: 1440px) and (max-width: 2559px) {
-
-    /* #navbarVarId{
-        width: 55vw;
-    } */
-
-    #buttonNav1,
-    #buttonNav2,
-    #buttonNav3,
-    #buttonNav4,
-    #buttonNav5{
-        background-color: white;
-        border: 1px solid gray;
-        align-content: center;
-        width: 16%;
-        height: 2%;
-    } 
-
-
 }
